- fixed slider items overflowing - added media queries for the news section     - max 1260px     - max 992px     - started max 767px but am having problem     with the main image not scaling

--- a/style.scss
+++ b/style.scss
@@ -612,11 +612,13 @@ p {
 /*! Slider */
 
 .slider-container {
+    display: flex;
     margin-top: 100px;
     margin-left: 20px;
     margin-bottom: 50px;
-    display: flex;
     gap: 100px;
+    object-fit:fill;
+    overflow: hidden;
 }
 
 /*! Welcome */
@@ -766,6 +768,10 @@ p {
         letter-spacing: .4px;
     }
 
+    a:hover {
+        text-decoration: underline;
+    }
+
     p {
         line-height: 1.375rem;
         font-size: .8125rem;
@@ -787,6 +793,7 @@ p {
         height: 583.86px;
         width: 370px;
         position: relative;
+        transition: all .5s ease;
 
         img {
             max-width: 100%;
@@ -795,6 +802,11 @@ p {
 
 
     
+    }
+
+    #news-box:hover {
+        transition: all .5s ease;
+        transform: translateY(-10px);
     }
 
 
@@ -1004,11 +1016,27 @@ p {
                 margin-bottom: -90px;
             }
         }
-  }
+   }
     .welcome-container {
         height: 745.6px;
         #welc-box {
             width: 465px;
+        }
+    }
+
+    .news-header-container {
+        .news-title {
+            width: 815px;
+        }
+    }
+
+    .news-container {
+        .news-box-3 {
+            display: none;
+        }
+
+        #news-box {
+            width: 455px;
         }
     }
 }
@@ -1123,6 +1151,19 @@ p {
         }
     }
 
+    .news-header-container {
+        .news-title {
+            width: 590px;
+        }
+    }
+
+    .news-container {
+        
+        #news-box {
+            width: 345px;
+        }
+    }
+
 
   
   }
@@ -1218,5 +1259,29 @@ p {
             }
         }
     }
+
+    .news-header-container {
+        .news-title {
+            width: 815px;
+        }
+        .news-link {
+            display: none;
+        }
+    }
+
+    .news-container {
+
+        flex-wrap: wrap;
+
+        .news-box-3 {
+            display: block;
+        }
+
+        #news-box {
+           width: 90%;
+        }
+    }
+
+
   }
   
